--- a/src/docs/asciidoc/software-architecture.adoc
+++ b/src/docs/asciidoc/software-architecture.adoc
@@ -1,5 +1,5 @@
 = Software architecture
-:doc-root: https://jdata.pl/notes
+:doc-root: https://notes.jdata.pl
 :toc: left
 :toclevels: 4
 :tabsize: 4
