--- a/src/docs/asciidoc/python.adoc
+++ b/src/docs/asciidoc/python.adoc
@@ -176,3 +176,56 @@ To maintain original list:
 ----
 sorted(list)
 ----
+
+=== Reversing
+
+[source,python]
+----
+list.reverse()
+----
+
+Ranges
+
+[source,python]
+----
+for value in range(1, 5):
+    print(value)
+----
+
+List of numbers:
+
+[source,python]
+----
+numbers = list(range(1, 6))
+print(numbers)
+----
+
+[source,python]
+----
+squares = []
+
+for x in range(1, 11):
+    squares.append(x ** 2)
+
+print(squares)
+----
+
+Aggregation functions:
+
+[source,python]
+----
+digits = [1, 2, 3, 4, 5, 6, 7, 8, 9, 0]
+
+print('min: %d' % min(digits))
+print('max: %d' % max(digits))
+print('sum: %d' % sum(digits))
+----
+
+List comprehensions:
+
+[source,python]
+----
+squares = [value ** 2 for value in range(1, 11)]
+print(squares)
+----
+
