--- a/src/docs/asciidoc/elasticstack.adoc
+++ b/src/docs/asciidoc/elasticstack.adoc
@@ -415,3 +415,46 @@ ouput.logstash:
 $ filebeat modules enable apache2
 $ systemctl start filebeat
 ----
+
+=== Kibana
+
+----
+$ wget https://artifacts.elastic.co/downloads/kibana/kibana-6.2.3-x86_64.rpm
+$ sudo rpm --install kibana-6.2.3-x86_64.rpm
+$ sudo systemctl enable kibana
+$ sudo systemctl start kibana
+----
+
+=== Lab - enabling system logs
+
+. Install openjdk
+. Install ES
+. Install Kibana
+. Install filebeat
+    .. edit configuration
++
+----
+sudo vim /etc/filebeat/modules.d/system.yml.disabled
+----
+ var.convert_timezone: true
+    .. enable system module
++
+----
+$ sudo filebeat modules enable system
+----
++
+    .. install ingest-geoip plugin:
++
+----
+$ sudo /usr/share/elasticsearch/bin/elasticsearch-plugin install ingest-geoip
+$ sudo systemctl restart elasticsearch
+----
++
+    .. filebeat setup
++
+----
+$ filebeat setup
+----
+
+== Elasticsearch Deep Dive Course (Linux Academy)
+
